# Backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY-CHECK.md  debt.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
contracts/: examples.json  topics.md  websocket.md
crates/api/: Cargo.toml
crates/api/migrations/: 0001_create_scores.sql  0002_game_config.sql
crates/api/src/: app.rs  config.rs  errors.rs  lib.rs  main.rs  router.rs  state.rs
crates/api/src/docs/: docs.rs  mod.rs
crates/api/src/modules/: mod.rs  mqtt.rs
crates/api/src/modules/admin/: auth.rs  mod.rs  routes.rs  service.rs
crates/api/src/modules/auth/: mod.rs
crates/api/src/modules/game/: dto.rs  routes.rs  service.rs
crates/api/src/modules/health/: routes.rs
crates/api/src/modules/menu/: state_machine.rs
crates/api/src/modules/realtime/: bridge_sync.rs  hub.rs  mod.rs  ws_handler.rs
crates/api/src/modules/room/: mod.rs
crates/api/src/modules/scores/: dto.rs  routes.rs  service.rs
crates/api/src/modules/screen/: auth.rs  mod.rs  routes.rs  ws_handler.rs
crates/api/tests/: bridge_integration.rs  game_integration.rs
crates/game-logic/: Cargo.toml
crates/game-logic/src/: lib.rs
crates/game-logic/src/combo/: detector.rs  error.rs  memory.md  mod.rs  model.rs  multiplier.rs  streak.rs
crates/game-logic/src/engine/: config.rs  core.rs  events.rs  memory.md  mod.rs  scoring.rs  states.rs
crates/game-logic/src/engine/components/: health.rs
crates/game-logic/src/engine/core/: charge.rs  emit.rs  input.rs  mod.rs  process.rs  ulti.rs
crates/game-logic/src/engine/pve/: difficulty.rs  engine.rs  events.rs  mod.rs  states.rs  use-casePVE.md
crates/game-logic/src/engine/services/: charge.rs  mod.rs  ulti.rs
crates/game-logic/src/player/: memory.md  mod.rs
crates/game-logic/src/player/personnages/: character.rs  character_stats.rs  mod.rs  perso.md
crates/game-logic/src/player/skills/: mod.rs  player_bonus.rs  player_malus.rs  skills.md
crates/game-logic/src/use-case/: player_character.md  start_game.md
crates/mqtt-bridge/: Cargo.toml
crates/mqtt-bridge/src/: bridge.rs  client.rs  config.rs  errors.rs  handler.rs  main.rs
crates/screen-hub/: Cargo.toml
crates/screen-hub/src/: error.rs  lib.rs  registry.rs  router.rs
crates/shared/: Cargo.toml
crates/shared/src/: dto.rs  events.rs  lib.rs  model.rs  screen.rs
nginx/default.d/: default.conf
policies/: dockerfile.rego
(+3 files in other folders)
