[workspace]
members = [
    "crates/api",
    "crates/mqtt-bridge",
    "crates/shared",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }