[workspace]
members = [
    "crates/api",
    "crates/mqtt-bridge",
    "crates/screen-hub",
    "crates/shared",
]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
lucy = { path = "../Lucy/crates/lucy" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
rumqttc = "0.25"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"