[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
utoipa.workspace = true
lucyd.workspace = true
schemars.workspace = true
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util.workspace = true
jsonwebtoken = "9"
shared = { path = "../shared" }
screen-hub = { path = "../screen-hub" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
reqwest = { version = "0.12", features = ["json"] }